fixed logo spacing, removed pink behind hamburger, fixed mailchimp signup on some phone sizes

--- a/one-commercial/src/components/contactPage/contatForm/contactform.module.sass
+++ b/one-commercial/src/components/contactPage/contatForm/contactform.module.sass
@@ -22,6 +22,8 @@
       textarea
           border: 1px solid black
           resize: none
+          padding: 0px 5px
+
       input[type=submit]
           font-size: .7em
           align-self: flex-end
