--- a/one-commercial/src/components/home/signupcta/mailchimpstyles.sass
+++ b/one-commercial/src/components/home/signupcta/mailchimpstyles.sass
@@ -22,7 +22,7 @@
     vertical-align: top
     @media(max-width: 862px)
       width: 60%
-    @media(max-width: 414px)
+    @media(max-width: 440px)
       width: 78%
       height: 26px 
       line-height: 26px
@@ -57,7 +57,7 @@
     display: inline-block
     margin: 0
     transition: all 0.23s ease-in-out 0s
-    @media (max-width: 414px)
+    @media (max-width: 440px)
       font-size: 11px !important
       height: 26px
       line-height: 26px
