--- a/one-commercial/src/components/main.sass
+++ b/one-commercial/src/components/main.sass
@@ -58,7 +58,12 @@
       align-items: center
       height: 100%
     &__brand
+      display: flex
+      // background: orange
+      height: var(--height)
       margin: auto 0
+      align-self: center
+      justify-self: center
       .company--logo
         width: calc(var(--height)*1.4)
         height: auto
@@ -95,14 +100,14 @@
         align-self: center 
         justify-self: center
         // background: red
-        height: 40%
+        height: 20%
         width: 30px
         @include navsnap 
           display: flex
         @include phone-large 
-          height: 32%
+          // height: 32%
         @include phone-small 
-          height: 35%
+          // height: 35%
         &__hamburger
           display: flex 
           flex-direction: column 
@@ -110,7 +115,6 @@
           justify-content: space-between
           width: 100%
           height: 100%
-          background: lightpink
           //class gets added to __hamburger to change jc
           &.expanded 
             justify-content: center
@@ -125,7 +129,7 @@
               transform: rotate(-45deg)
           //sets styles of lines before expanded
           span.line
-            height: 2px 
+            height: 1px 
             width: 30px
             background: black
             opacity: 1
